# template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  check.sh  init_log.md  pyproject.toml  ruff.sh  singularity.def
config/: main.yaml
config/mode/: dev.yaml
src/: main.py
src/modules/: __init__.py  hydra_frequents.py  mylogger.py
src/utils/: __init__.py  mylogger.py
template/: main.py
template/modules/: __init__.py  mylogger.py
